# snapTo

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/snapto-cli/: Cargo.toml  DEPENDENCIES.md  EXAMPLES.md  FEATURES.md  README.md
crates/snapto-cli/src/: main.rs  output.rs  progress.rs
crates/snapto-cli/src/commands/: config.rs  history.rs  mod.rs  upload.rs  watch.rs
crates/snapto-core/: Cargo.toml  README.md
crates/snapto-core/src/: clipboard.rs  config.rs  error.rs  history.rs  keychain.rs  lib.rs  naming.rs  screenshot.rs
crates/snapto-core/src/upload/: local.rs  mod.rs  sftp.rs  ssh.rs
crates/snapto-tui/: Cargo.toml  README.md
crates/snapto-tui/src/: app.rs  events.rs  main.rs
crates/snapto-tui/src/ui/: history.rs  home.rs  mod.rs  settings.rs  upload.rs
scripts/: build-all.sh  build-flutter.sh  dev-cli.sh  run-flutter.sh
snapto_app/: .gitignore  .metadata  README.md  pubspec.yaml
snapto_app/assets/: .gitkeep
snapto_app/docs/: ARCHITECTURE.md  FILES.txt  GET_STARTED.md  PROJECT_SUMMARY.md  QUICKSTART.md  SETUP.md  STATUS.md
snapto_app/lib/: main.dart
snapto_app/lib/services/: hotkey_service.dart  notification_service.dart  screenshot_service.dart  tray_service.dart  upload_service.dart
snapto_app/macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Info.plist  Release.entitlements  copy_binaries.sh
snapto_app/macos/Runner.xcodeproj/: project.pbxproj
snapto_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
snapto_app/macos/Runner/Configs/: AppInfo.xcconfig  Warnings.xcconfig
snapto_app/test/: widget_test.dart
