[package]
name = "snapto-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "snapto-tui"
path = "src/main.rs"

[dependencies]
snapto-core = { path = "../snapto-core" }
tokio = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
